# raytracer

./: .gitignore  CMakeLists.txt  README.md  README.txt  anaglyph-notes.md  main.c
include/: sceneloader.h
include/rayTracerCore/: camera.h  light.h  material.h  ray.h  rayhit.h
include/rayTracerCore/shapes/: ellipsoid.h  geometry.h  triangle.h
include/util/: colors.h  imageio.h  ringbuffer.h  usefulfunctions.h  vector.h
rayTraceCore/: CMakeLists.txt  camera.c  ellipsoid.c  geometry.c  light.c  material.c  ray.c  rayhit.c  triangle.c
sceneloader/: CMakeLists.txt  sceneloader.c
util/: imageio.c  ringbuffer.c  usefulfunctions.c  vector.c
